src/test/deca/context/valid/Obj/new.deca
// Description:
//    Utilisation de New
//
// Résultat:
//    Succès
//
class A {}
{
    A a = new A();
}