src/test/deca/context/invalid/Obj/return-type.deca
// Description:
//    Méthode renvoyant un type
//
// Résultat:
//Ne doit pas passer
//
class A{
    int methode(){
        return int;
    }
}
{}